# ai-agent

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/shader/: circles.frag  demo.frag  demo.vert  mandel.frag  world.frag
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/util/: shader.cpp  shader.h  util.cpp  util.h
